build_reset.log

> runcoach@0.1.0 build
> vite build

[36mvite v5.4.21 [32mbuilding for production...[36m[39m
transforming...
node:internal/process/promises:394
    triggerUncaughtException(err, true /* fromPromise */);
    ^

[Failed to load PostCSS config: Failed to load PostCSS config (searchPath: C:/Users/Oyvin/Documents/GitHub/smart-training-planner): [Error] Loading PostCSS Plugin failed: Cannot find module 'object-hash'
Require stack:
- C:\Users\Oyvin\Documents\GitHub\smart-training-planner\node_modules\tailwindcss\lib\util\hashConfig.js
- C:\Users\Oyvin\Documents\GitHub\smart-training-planner\node_modules\tailwindcss\lib\lib\setupTrackingContext.js
- C:\Users\Oyvin\Documents\GitHub\smart-training-planner\node_modules\tailwindcss\lib\plugin.js
- C:\Users\Oyvin\Documents\GitHub\smart-training-planner\node_modules\tailwindcss\lib\index.js
- C:\Users\Oyvin\Documents\GitHub\smart-training-planner\postcss.config.js

(@C:\Users\Oyvin\Documents\GitHub\smart-training-planner\postcss.config.js)
Error: Loading PostCSS Plugin failed: Cannot find module 'object-hash'
Require stack:
- C:\Users\Oyvin\Documents\GitHub\smart-training-planner\node_modules\tailwindcss\lib\util\hashConfig.js
- C:\Users\Oyvin\Documents\GitHub\smart-training-planner\node_modules\tailwindcss\lib\lib\setupTrackingContext.js
- C:\Users\Oyvin\Documents\GitHub\smart-training-planner\node_modules\tailwindcss\lib\plugin.js
- C:\Users\Oyvin\Documents\GitHub\smart-training-planner\node_modules\tailwindcss\lib\index.js
- C:\Users\Oyvin\Documents\GitHub\smart-training-planner\postcss.config.js

(@C:\Users\Oyvin\Documents\GitHub\smart-training-planner\postcss.config.js)
    at load (file:///C:/Users/Oyvin/Documents/GitHub/smart-training-planner/node_modules/vite/dist/node/chunks/dep-BK3b2jBa.js:33632:11)
    at file:///C:/Users/Oyvin/Documents/GitHub/smart-training-planner/node_modules/vite/dist/node/chunks/dep-BK3b2jBa.js:33657:16
    at Array.map (<anonymous>)
    at plugins (file:///C:/Users/Oyvin/Documents/GitHub/smart-training-planner/node_modules/vite/dist/node/chunks/dep-BK3b2jBa.js:33656:8)
    at processResult (file:///C:/Users/Oyvin/Documents/GitHub/smart-training-planner/node_modules/vite/dist/node/chunks/dep-BK3b2jBa.js:33726:14)
    at file:///C:/Users/Oyvin/Documents/GitHub/smart-training-planner/node_modules/vite/dist/node/chunks/dep-BK3b2jBa.js:33856:14]

Node.js v24.12.0
